fix(auth): stabilize JWT auth, user identity, and websocket security